# msm5xxx-emulator

./: .gitignore  .msm5xxx-update-manifest.json  CONTRIBUTING.md  README.ko.md  README.md  README_ALPHA.md  THIRD_PARTY_NOTICES.md  _compat.py  boot_probe.py  condition_report.py  corpus_verify.py  gui.py  msm5xxx.py  nor_flash.py  pyproject.toml  requirements.txt  run_linux.sh  run_windows.bat  runtime_log.py  state_io.py  verify.py
src/msm5xxx_emulator/: __init__.py  cli.py  legacy_api.py  state_io.py  update.py
src/msm5xxx_emulator/core/: __init__.py  checkpoint.py  config.py  constants.py  emulator.py  errors.py  lifecycle.py  memory_bus.py  runtime.py
src/msm5xxx_emulator/detection/: __init__.py  arm.py  boot.py  chipset.py  display.py  firmware.py  input.py  memory_layout.py  model.py  rex.py  signatures.py  storage.py
src/msm5xxx_emulator/devices/: __init__.py  audio.py  input.py
src/msm5xxx_emulator/diagnostics/: __init__.py  runtime_log.py
src/msm5xxx_emulator/gui/: __init__.py  app.py  controls.py  display_view.py  locale.py  repro.py  settings.py  (+2 more)
tests/: test_board_adc_reader.py  test_board_status_input.py  test_boot_probe_phase.py  test_bootstrap_scatter_chain.py  test_cli_host_backend.py  test_control_sink.py  test_corpus_verify.py  test_detection.py  test_eeprom.py  test_guest_owned_status.py  test_gui_locale.py  test_gui_telemetry.py  test_input_runtime.py  test_lcd_geometry.py  test_live_framebuffer.py  test_ma2_silent_boot.py  test_mmio_aperture.py  test_nor_telemetry.py  test_rex_idle_observation.py  test_runtime_log.py  test_update.py
(+27 files in other folders)
